Fri Aug 01 02:35:35 GMT 2014  Olly Betts <olly@survex.com>

	* include/xapian/visibility.h: Add link to GCC Visibility wiki page.

Thu Jul 31 02:54:40 GMT 2014  Olly Betts <olly@survex.com>

	* tests/api_weight.cc,weight/bb2weight.cc: Avoid calculating logs of 0
	  or negative values by clamping the normalise wdf to at most one less
	  than the collection frequency, and the collection size to at least
	  2.

Thu Jul 31 02:48:35 GMT 2014  Olly Betts <olly@survex.com>

	* tests/api_weight.cc,weight/bb2weight.cc: Fix upper bound for
	  BB2Weight to not be scaled twice by wqf and factor.

Wed Jul 30 05:48:46 GMT 2014  Olly Betts <olly@survex.com>

	* weight/bb2weight.cc: Fix comment typo, and capitalise "Stirling" in
	  comments.

Wed Jul 30 05:47:31 GMT 2014  Olly Betts <olly@survex.com>

	* weight/bb2weight.cc: Whitespace cleanup.

Wed Jul 30 05:43:59 GMT 2014  Aarsh Shah <aarshkshah1992@gmail.com>

	* include/xapian/weight.h,weight/bb2weight.cc: Optimise BB2Weight and
	  fix incorrect upper bound in some cases.

Tue Jul 29 07:20:57 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_version.cc: Remove assertion that table sizes
	  are all the same, and redundant assertion that the unserialised
	  blocksize is >= 2048.  Fixes set-but-not-used warning in
	  non-assertion build.

Mon Jul 28 06:35:45 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_databasereplicator.cc,
	  backends/brass/brass_databasereplicator.h,
	  backends/brass/brass_table.cc: Replace enum table_id with enum
	  Brass::table_type.

Mon Jul 28 04:28:12 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Note the freelist implementation fixed #40.

Mon Jul 28 04:26:07 GMT 2014  Olly Betts <olly@survex.com>

	* api/compactor.cc,backends/brass/,backends/dbcheck.cc,
	  tests/api_wrdb.cc: Eliminate the base files, and instead store the
	  root block and freelist pointers in the "iambrass" file.

Mon Jul 28 03:22:22 GMT 2014  Olly Betts <olly@survex.com>
